# deep-dive-into-portfolio-optimisation

./: .gitattributes  .gitignore  README.md  build_clean_prices.py  debug_check.py  download_raw_data.py  pyproject.toml  requirements.txt
bm_implementation/: portfolio_returnns.py  price_matrix.py  weights.py
data/: PLAN.md
reports/main/: PLAN.md  apcr-contemporary.cls  main.tex  report-structure.md  scr-contemporary.cls
reports/refs/: apcr-refs.bib  refs.bib
reports/under the hood/: PLAN.md  presentation.tex
src/: main.py
src/backtesting/: backtester.py  strategies.py
src/data_collection/: build_clean_prices.py
src/data_pipeline/: build_clean_prices.py  download_raw_data.py
src/models/: bl_views.py  black_litterman.py  mvo.py  optimisers.py  predictor.py  risk_parity.py
src/research/: debug_check.py  run_bl_inference.py  run_equal_weight_backtest.py  run_risk_parity_backtest.py
src/scripts/: run_bl_backtest.py  run_bl_inference.py  run_bl_sensitivity.py  run_equal_weight_backtest.py  run_mvo_backtest.py  run_risk_parity_backtest.py  run_sanity_check.py
src/visualizations/: generate_results_figures.py  plot_efficient_frontier.py  plot_risk_parity_illustration.py  plotting.py
