[project]
name = "deep-dive-into-portfolio-optimisation"
version = "0.1.0"
description = ""
authors = [
    {name = "rickdisi",email = "riccardo.disilvio@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "src"}
]
